correct the overlapping ui problem in the books

--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -26,6 +26,7 @@
 
     &__title-sm {
         & h4 {
+
             font-size: 22px;
             font-weight: 700;
             padding-bottom: 40px;
@@ -149,7 +150,7 @@
         }
 
         & span {
-            font-weight: 500;
+            font-weight: 500;  
             font-size: 17px;
             text-transform: uppercase;
             color: var(--it-common-white);
@@ -173,7 +174,7 @@
     }
 
     &__content {
-        height: 20vh;
+        height: 25vh;
         padding: 30px 15px;
         box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
     }
@@ -182,7 +183,8 @@
         padding-bottom: 20px;
         & p{
 
-            height: 5vh;
+            margin-bottom: 1px;
+            height: vh;
         }
 
         & span {
